--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #服务端口号
 server.port=8080
-#日志界别
-logging.level.root=INFO
+#日志界别 log4J2 日志对springboot 支持不友好，需要单独配置log4j2.xml
+#logging.level.root=DEBUG
 #彩色日志如果你的控制台支持
 spring.output.ansi.enabled=always
 
@@ -15,13 +15,16 @@ spring.devtools.restart.exclude=static/**,public/**
 #----热加载启动配置结束----
 
 #----数据配置开始----
-spring.datasource.url=jdbc:mysql://192.168.80.128:3306/test
+spring.datasource.url=jdbc:mysql://192.168.200.53:3306/test
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=123456-a
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
+spring.datasource.sql-script-encoding=utf-8
+spring.datasource.hikari.max-lifetime=1765000
+spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #----数据配置结束----
