--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
+        <thymeleaf-layout-dialect.version>2.0.0</thymeleaf-layout-dialect.version>
     </properties>
 
     <dependencies>
@@ -57,7 +59,7 @@
             </exclusions>
         </dependency>
 
-        <!-- 移除 tomcat-jdbc, Spring Boot 将会自动使用 HikariCP -->
+        <!-- 移除 tomcat-jdbc, Spring Boot 将会自动使用 HikariCP。  JDBC连接池 性能优于druid 、dbcp、tomcatJDBC连接池 -->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
@@ -77,7 +79,7 @@
         </dependency>
 
         -->
-        <!-- Web 容器 undertow -->
+        <!-- Web 容器 undertow  性能优于jetty  tomcat-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
@@ -95,7 +97,7 @@
             <artifactId>lombok</artifactId>
             <version>1.16.14</version>
         </dependency>
-        <!-- 添加Hibernate依赖
+        <!-- 添加Hibernate依赖  便于多表查询，暂不使用Hibernata JPA
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -109,13 +111,7 @@
             -->
 
 
-        <!--添加数据库驱动
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
--->
-        <!-- Mariadb 依赖 驱动 -->
+        <!-- Mariadb 依赖 驱动  Mariadb数据库驱动，使用Mariadb数据库性能优于mysql-->
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
