--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,16 +15,22 @@ spring.devtools.restart.exclude=static/**,public/**
 #----热加载启动配置结束----
 
 #----数据配置开始----
-spring.datasource.url=jdbc:mysql://192.168.200.53:3306/test
+spring.datasource.url=jdbc:mysql://192.168.80.128:3307/test
 spring.datasource.username=root
-spring.datasource.password=123456-a
+spring.datasource.password=123456
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.min-idle=5
-spring.datasource.initial-size=5
-spring.datasource.sql-script-encoding=utf-8
+#tomcat jdbc连接池属性
+#spring.datasource.max-idle=10
+#spring.datasource.max-wait=10000
+#spring.datasource.min-idle=5
+#spring.datasource.initial-size=5
+#spring.datasource.sql-script-encoding=utf-8
+
+#hikari 连接池属性
 spring.datasource.hikari.max-lifetime=1765000
 spring.datasource.hikari.maximum-pool-size=10
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #----数据配置结束----
+
+# Mybatis 配置
+mybatis。config-location=classpath:/mybatis.xml
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
